--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -13,12 +13,14 @@
       </ul>
     </div>
   <% end %>
-
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
+<div class="form-group">
+  <%= f.label "名前" %>
+  <%= f.text_field :name, class: "form-control" %>
+</div>
+<div class="form-group">
+  <%= f.label "内容" %>
+  <%= f.text_area :body, class: "form-control" %>
+</div>
   <%= f.submit class: "btn btn-sm btn-primary" %>
 <% end %>
 
