--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -17,6 +17,12 @@
   <%= f.label "名前" %>
   <%= f.text_field :name, class: "form-control" %>
 </div>
+
+<div class="form-group">
+  <%= f.label "年齢" %>
+  <%= f.text_field :age, class: "form-control" %>
+</div>
+
 <div class="form-group">
   <%= f.label "内容" %>
   <%= f.text_area :body, class: "form-control" %>
